--- a/src/Pagination.css
+++ b/src/Pagination.css
@@ -8,7 +8,7 @@
 }
 
 .inputContainer {
-  width: 20%;
+  width: 35%;
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -18,16 +18,18 @@
 .inputContainer .inputField {
   width: 50px;
   height: 40px;
+  text-align: center;
   border-radius: 5px;
   border: 1px solid rgba(0, 0, 0, 0.3);
 }
 
 .pageNumberContainer {
+  width: 40%;
   list-style: none;
   display: flex;
   flex-direction: row;
   align-items: center;
-  justify-content: space-around;
+  justify-content: space-evenly;
 }
 
 .pageNumberContainer li {
